<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.SearchActivity"
    tools:keep="@layout/activity_search">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/ll_search"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:background="@drawable/ll_search_bar_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_icon"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:textColor="@color/WHITE"
            android:textColorHint="@color/WHITE"
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/search_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="14sp"
            android:imeOptions="actionSearch"/>

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/close_icon"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </LinearLayout>


    <RelativeLayout
        android:background="@color/SearchItemCellBackground"
        android:id="@+id/rl_search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <View
            android:id="@+id/fixed_bar"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/LIGHTGREY" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/fixed_bar"
            android:id="@+id/rv_search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="3dp" />


    </RelativeLayout>


</LinearLayout>