<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/SearchItemCellBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_coolbluesChoiceInformationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_bold"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <!--Product Image-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">
                <ImageView
                    android:id="@+id/iv_productImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/WHITE"
                    android:contentDescription="@string/product_image"
                    android:scaleType="fitCenter" />
            </androidx.cardview.widget.CardView>

            <include
                android:id="@+id/i_actionPrice"
                layout="@layout/action_price"
                android:visibility="gone" />

            <include
                android:id="@+id/i_coolbluesCoice"
                layout="@layout/coolblue_choice"
                android:visibility="gone" />

        </LinearLayout>

        <!--Product Information-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.25"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/tv_productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textColor="@color/BLUE"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="2dp">

                <nl.coolblue.mobile.utils.RatingBarSvg
                    android:id="@+id/r_reviewAverage"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressDrawable="@drawable/ll_rating"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/tv_reviewCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_USPs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_salesPriceIncVat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/source_sans_pro_bold"
                        android:paddingTop="5dp"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_listPriceIncVat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tv_delivered_tomorrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="3dip"
                        android:fontFamily="@font/source_sans_pro_bold"
                        android:text="@string/delivered_tomorrow"
                        android:textColor="@color/GREEN"
                        app:drawableStartCompat="@drawable/ic_green_tick" />

                    <TextView
                        android:id="@+id/tv_availabilityState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_addToCart"
                    android:layout_width="55dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/GREEN"
                    android:contentDescription="@string/add_to_cart_button"
                    android:src="@drawable/ic_cart" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/SearchCellDividerColor" />

</LinearLayout>

